funcmap_tests/tests/ui/opts/crate_arg_with_trailing_colon.stderr
error: expected path
 --> tests/ui/opts/crate_arg_with_trailing_colon.rs:4:19
  |
4 | #[funcmap(crate = "fake_funcmap::")]
  |                   ^^^^^^^^^^^^^^^^
